Refactor table manager